--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body{
 .container{
   background: rgba(10, 1, 62, 0.679);
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0%;
   bottom: 0%;
   left: 0%;
@@ -101,19 +103,170 @@ display: none;
 
 
 @media screen and (max-width:800px) {
-  .menu-button1{
-    border: solid red;
-    width: 50px;
-    height: 50px;
-    display: block;
+ 
+  .navbar{
+ 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
   }
 
+  .list-item{
+    list-style: none;
+    padding: 9px;
+    color:#F4BE2C;
+    font-size: 15px;
+  }
+
+  .navbar>div:nth-child(1)>img{
+    width:70px;
+    height: 60px;
+   
+  }
+
+  .button-small{
+    background-color: #FF6263;
+    color: #fff;
+    padding:5px;
+    width:70px;
+    font-size: 15px;
+    margin-right: 50px;
+    border: none;
+  }
   
+  
+.hero{
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+ 
+}
 
+.hero-heading{
+  color: #F4BE2C;
+  font-weight: 600;
+  font-size: 65px;
+  padding: 15px;
+}
 
+.hero-heading>h1{
+  text-align: center;
+}
+
+.button-large{
+  background-color: #FF6263;
+  color: #fff;
+  padding:10px;
+  width:150px;
+  font-size: 20px;
+  border: none;
+}
+
+.bottom{
+  position: inherit;
+  float: right;
+  
+}
+
+.bottom>div>img{
+  margin: 30px;
+  width: 140px;
+  height: 140px;
+ 
+
+}
+
+}
+
+@media screen and (max-width:600px) and (min-width:100px) {
+ 
+  .navbar{
+ 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 40px;
+  }
+
+  .list-item{
+   display: none;
+  }
+  .menu-button1{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+      
+    }
+ 
+    .menu-button1{
+     
+      width:30px;
+      height: 30px;
+      
+    }
+
+  .navbar>div:nth-child(1)>img{
+    width:60px;
+    height: 40px;
+   
+  }
+
+  .button-small{
+   display: none;
+  }
+  
+  
+.hero{
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+ 
+}
+
+.hero-heading{
+  color: #F4BE2C;
+  font-weight: 600;
+  font-size: 50px;
+  padding: 15px;
+}
+
+.hero-heading>h1{
+  text-align: center;
+}
+
+.button-large{
+  background-color: #FF6263;
+  color: #fff;
+  padding:8px;
+  width:100px;
+  font-size: 13px;
+  border: none;
+}
+
+.bottom{
+  position: inherit;
   
   
 }
+
+.bottom>div>img{
+ margin-top:10px ;
+  width: 80px;
+  height: 80px;
+ 
+
+}
+
+}
+
+
 
 
 
